Fix wrong coloring of answers

--- a/src/exercises/numbers-write/exercise.scss
+++ b/src/exercises/numbers-write/exercise.scss
@@ -62,7 +62,7 @@
                 border: 1px solid #ccc;
 
                 &.filled {
-                    background-color: #3498db;
+                    background-color: forestgreen;
                     border-radius: 50%;
                     transform: scale(0.8);
                 }
